--- a/fe/src/App.css
+++ b/fe/src/App.css
@@ -1,38 +1,44 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+  /* text-align: center; */
+  color: #fff;
   background-color: #282c34;
-  min-height: 100vh;
+}
+
+header {
+  width: 100%;
+  height: 80px;
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+  height: calc(100vh - 80px);
+}
+
+nav {
+  width: 300px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.actions {
+  width: 100%;
+  height: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.mainWrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.logViewWrapper {
+  display: flex;
+  flex-direction: row;
+  height: calc(100vh - 120px);
+  width: 100%;
 }
