--- a/src/fe/src/components/Monitor.scss
+++ b/src/fe/src/components/Monitor.scss
@@ -3,6 +3,8 @@
 
   .heading {
     position: relative;
+    width: 100%;
+    height: 60px;
 
     .id {
       font-size: 9px;
@@ -17,5 +19,12 @@
       right: 5px;
       cursor: pointer;
     }
+  }
+
+  .content {
+    position: relative;
+    width: 100%;
+    height: calc(100% - 60px);
+    overflow: auto;
   }
 }
